--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,14 @@ version: '3'
 services:
     renderer:
         build: renderer
+        environment:
+            - NODE_ENV=production
         volumes:
             - ./courses:/tmp/courses-raw
             - data-volume:/tmp/courses-rendered
+        command: ["npm", "start"]
     reader:
         build: reader
-        depends_on:
-            - renderer
         volumes:
             - data-volume:/tmp/courses-rendered
         environment:
