--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
 version: '3'
 
 services:
+    pg:
+        image: postgres:9.6
+    rabbit:
+        image: rabbitmq:3.6-management
     renderer:
         build: renderer
         environment:
