--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
         build: sandbox
         depends_on:
             - rabbit
+            - consul
     renderer:
         build: renderer
         environment:
