--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
             - '8500:8500'
     validator:
         image: codingavenue/ca-school-course-validator-rest-api:latest
+        ports:
+            - '8090:8090'
     sandbox:
         image: codingavenue/ca-school-sandbox:latest
         depends_on:
